<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove_24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="혈당"
            android:padding="8dp"
            android:textColor="@color/dark_blue"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_close_24"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutVideo"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_of_management"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_sugar_records"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutShorts"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

       <!-- 여기는 표 넣을 거임-->
        <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:stretchColumns="1">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <!-- Table Header -->
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="구분"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="8dp"
                android:background="@color/light_blue_grey" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="정상 수치 (mg/dl)"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="8dp"
                android:background="@color/light_blue_grey" />
        </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <!-- Table Rows -->
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="공복혈당(=자기 전, 기타)"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="8dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="80 ~ 130"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="8dp" />
        </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="식전혈당"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="8dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="100 ~ 120"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="8dp" />
        </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="식후혈당(식후 2시간)"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="8dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="120 ~ 140"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="8dp" />
        </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLive"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_reference"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>